--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,11 +24,18 @@
 		<a ng-href="{{x.url}}">{{x.val}}</a>
 		</div>
 	</div>
-	<div class="container-fluid">
-		<div class="row clearfix row-first">
+	<div class="container">
+		<!-- set images -->
+		<div class="row row-first">
 			<div class="col-md-12 column">
 				<img src="/images/bg_1.png">
 			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8">
+				
+			</div>
+			<div class="col-md-4"></div>
 		</div>
 	</div>
 </body>
